src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --neutral-1: #F8F8F6;
  --neutral-1-overlay: #FFFFFF;
  --neutral-2: rgba(243, 243, 241, 1);
  --neutral-3: #E2E3DC;
  --neutral-4: #D2D3C8;
  --pine-1: #E8EEE7;
  --pine-2: #B4CFB0;
  --pine-3: #6EA465;
  --pine-4: #487B40;
  --pine-5: #315B2B;
  --plum-1: #F3EFF1;
  --plum-2: #F0D8E6;
  --plum-3: #CB7FAB;
  --plum-4: rgba(224, 148, 192, 1);
  --gold-0: #F8F3E5;
  --gold-1: #EDDDB2;
  --gold-2: #E0C478;
  --gold-3: #CEA83F;
  --gold-4: #B18C24;
  --gold-5: #82620B;
  --khaki-0: #F2F0E9;
  --khaki-1: #EBE8E0;
  --khaki-4: rgba(210, 204, 183, 1);
  --olive-5: rgba(175, 190, 117, 1);
  --type-1: #000000;
  --type-2: #323A3A;
  --type-3: #707070;
  --type-link: #487B40;
  --type-alt: #FFFFFF;
  --border-pine-medium: rgba(72, 123, 64, 1);
  --border-pine: rgba(144, 188, 137, 1);
  --border-medium: rgba(38, 35, 21, 0.4);
  --border-subtle: rgba(0, 0, 0, 0.2);
  --icon-primary: rgba(32, 38, 21, 0.9);
  --icon-plum: rgba(138, 56, 103, 1);
  --icon-gold: rgba(206, 168, 63, 1);
  --icon-green: rgba(72, 123, 64, 1);
  --icon-neutral: rgba(51, 51, 48, 1);
}

:root.dark {
  --neutral-1: #232320; 
  --neutral-1-overlay: rgba(51, 51, 48, 1);
  --neutral-2: rgba(50, 51, 47, 1);
  --neutral-3: #73766C;
  --neutral-4: #84876F;
  --pine-1: #2C3228;
  --pine-2: #294026;
  --pine-3: #6EA465;
  --pine-4: #487B40;
  --pine-5: #315B2B;
  --plum-1: #3D3037;
  --plum-2: #5F2446;
  --plum-3: #F0D8E6;
  --plum-4: rgba(224, 148, 192, 1);
  --gold-0: #59450B;
  --gold-1: #82620B;
  --gold-2: #B18C24;
  --gold-3: #CEA83F;
  --gold-4: #B18C24;
  --gold-5: #82620B;
  --khaki-0: #33322B;
  --khaki-1: #5C522E;
  --khaki-4: rgba(210, 204, 183, 1);
  --olive-5: rgba(175, 190, 117, 1);
  --type-1: #FFFFFF;
  --type-2: #EBECE6;
  --type-3: #9EA18A;
  --type-link: #90BC89;
  --type-alt: #FFFFFF;
  --border-pine: #90BC89;
  --border-pine-medium: rgba(72, 123, 64, 1);
  --border-medium: rgba(154, 156, 147, 0.6);
  --border-subtle: rgba(154, 156, 147, 0.35);
  --icon-primary: rgba(194, 194, 194, 0.95);
  --icon-plum: rgba(224, 148, 192, 1);
  --icon-gold: rgba(206, 168, 63, 1);
  --icon-green: rgba(110, 164, 101, 1);
  --icon-neutral: rgba(226, 227, 220, 1);
}

body {
  color: var(--type-1);
  background: var(--neutral-1);
}

.stop-scrolling {
  height: 100%;
  overflow: hidden;
}

